# rts_server

./: README.rst  pyproject.toml
html/rts_server/: index.html
html/rts_server/src/: index.html  lib.html  main.html
rts_server/: __main__.py
rts_server/src/: lib.py  main.py
